<resources>
    <string name="app_name">JoviChenMcintyre_MAPD711–001_Assignment2</string>
    <string name="oppo_reno8">Reno8 Pro</string>
    <string name="oppo_A77s">A77s</string>
    <string name="oppo_reno7_5G">Reno7 5G</string>
    <string name="google_pixel_7_pro">Pixel 7 Pro</string>
    <string name="google_pixel_6_pro">Pixel 6 Pro</string>
    <string name="google_pixel_5_pro">Pixel 5 Pro</string>
    <string name="samung_s22_ultra_5G">Galaxy S22 Ultra 5G</string>
    <string name="samung_galaxy_a53_5g">Galaxy A53 5G</string>
    <string name="samung_galaxy_a13">Galaxy A13</string>
    <string name="iphone_14_pro_max">iPhone 14 Pro Max</string>
    <string name="iphone_13_pro_max">iPhone 13 Pro Max</string>
    <string name="iphone_12_pro_max">iPhone 12 Pro Max</string>
    <string name="select_a_color">Select a color</string>
    <string name="_64_gb">64 GB</string>
    <string name="_128_gb">128 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="_512_gb">512 GB</string>
    <string name="come_for_the_phones_stay_for_the_price">Come for the phones, stay for the price</string>
    <string name="choose_color">Choose color:</string>
    <string name="choose_internal_storage">Choose internal storage:</string>
    <string name="checkout">Checkout</string>
    <string name="empty_card_number">Please fill out the card number field</string>
    <string name="error_16_digits">Please enter 16 digits for card number</string>
    <string name="empty_cvv">Please fill out the cvv field</string>
    <string name="error_3_digit_cvv">Please enter 3 digits for cvv number</string>
    <string name="empty_exp_month">Please fill out the expiry month field</string>
    <string name="error_12_month_in_year">There is only 12 months in a year</string>
    <string name="empty_exp_year">Please fill out the expiry year field</string>
    <string name="error_invaid_year">Please enter a valid year</string>
    <string name="empty_fname">Please fill out the firstname field</string>
    <string name="empty_lname">Please fill out the lastname field</string>
    <string name="empty_number">Please fill out the phone number field</string>
    <string name="empty_address">Please fill out the address field</string>
    <string name="empty_city">Please fill out the city field</string>
    <string name="empty_postal_code">Please fill out the postal code field</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="fill_out_the_information_below_to_complete_you_order">Fill out the information below to complete you order</string>
    <string name="customize_your_device">Customize your device</string>
    <string name="select_your_phone_specification_by_selecting_options_below">Select your phone specification by selecting options below</string>
    <string name="customize">Customize</string>
    <string name="order_summary">Order Summary</string>
    <string name="card_type">Card Type</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="card_number">Card Number</string>
    <string name="cc_placeholder">**** **** **** ****</string>
    <string name="cvv_cvc">CVV/CVC</string>
    <string name="cvv_place_holder">***</string>
    <string name="expiry_date">Expiry date</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="firstname">Firstname</string>
    <string name="enter_your_firstname">Enter your firstname</string>
    <string name="lastname">Lastname</string>
    <string name="enter_your_lastname">Enter your lastname</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="postalcode">Postal Code</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_postal_code">Enter your postal code</string>
    <string name="confirm_amp_pay"><![CDATA[Confirm & Pay]]></string>
    <string name="order_successful">Order successful</string>
    <string name="here_is_a_summary_of_your_order_and_delivery_details">Here is a summary of your order and delivery details</string>
    <string name="company">Company</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="card_last_4_digits">Card Last 4 Digits</string>
    <string name="price">Price</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="choose_handset_model">Choose handset model</string>
    <string-array name="string_of_phone_colors">
        <item>Blue</item>
        <item>Black</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Red</item>
    </string-array>
</resources>